# VidSpectre

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  config.py  docker-compose.yml  pyproject.toml  requirements.txt  run.py
.claude/skills/vidspectre-docker-deploy/: SKILL.md
.claude/skills/vidspectre-documentation-workflow/: SKILL.md
app/: __init__.py
app/api/: routes.py
app/core/: __init__.py  checker.py  task_manager.py
app/database/: models.py
app/scheduler/: tasks.py
app/web/: routes.py
docs/: PROJECT_SUMMARY.md
docs/superpowers/plans/: 2026-04-04-frontend-mobile-refactor.md  2026-04-04-subscription-cron-schedule-plan.md  2026-04-04-unified-scheduler.md  2026-04-04-vidspectre-implementation.md  2026-04-05-movie-scraping-optimization-plan.md  2026-04-06-scheduler-toggle-and-manual-fetch-plan.md
docs/superpowers/specs/: 2026-04-04-frontend-mobile-refactor-design.md  2026-04-04-subscription-cron-schedule-design.md  2026-04-04-unified-scheduler-design.md  2026-04-04-vidspectre-design.md  2026-04-05-movie-scraping-optimization-design.md  2026-04-06-scheduler-toggle-design.md  2026-04-06-subscription-enhancements-design.md
plugins/: __init__.py  interfaces.py  loader.py  registry.py
plugins/sources/: __init__.py
plugins/sources/btbtla/: __init__.py  parser.py  plugin.py
plugins/sources/manual/: __init__.py  plugin.py
static/js/: app.js
templates/: base.html  edit_subscription.html  index.html  settings.html  subscription.html
