[project]
name = "vidspectre"
version = "0.1.0"
description = "Video subscription tracking crawler"
requires-python = ">=3.10"
dependencies = [
    "Flask==3.0.0",
    "Flask-SQLAlchemy==3.1.1",
    "APScheduler==3.10.4",
    "requests==2.31.0",
    "beautifulsoup4==4.12.2",
    "lxml>=5.0.0",
    "gunicorn==21.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "plugins"]